Edits to main.css, addition of multiple pictures

--- a/main.css
+++ b/main.css
@@ -86,3 +86,7 @@ footer {
 	color: whitesmoke;
 	text-align: center;
 }
+/* .side-bar{
+	justify-content: right;
+	background-color: blueviolet;
+} */
